[gd_scene load_steps=2 format=3 uid="uid://bcr5jfstov5er"]

[ext_resource type="Script" path="res://scenes/menu/cheer_box.gd" id="1_dmth4"]

[node name="CheerBox" type="VBoxContainer"]
script = ExtResource("1_dmth4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cheer:"

[node name="CheerCount" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "19"

[node name="Slash" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "/"

[node name="CheerMax" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "20"

[node name="CheerGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2
